Projeto_Compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    FUNCTION

Grammar

Rule 0     S' -> program
Rule 1     program -> header block DOT
Rule 2     header -> PROGRAM ID SEMICOLON variables
Rule 3     variables -> VAR varDecls
Rule 4     variables -> empty
Rule 5     varDecls -> varDeclaration varDecls
Rule 6     varDecls -> empty
Rule 7     varDeclaration -> idList COLON type SEMICOLON
Rule 8     idList -> ID idListTail
Rule 9     idListTail -> COMMA ID idListTail
Rule 10    idListTail -> empty
Rule 11    type -> baseType
Rule 12    type -> arrayType
Rule 13    arrayType -> ARRAY LBRACKET NUMBER RANGE NUMBER RBRACKET OF baseType
Rule 14    baseType -> INTEGER
Rule 15    baseType -> REAL
Rule 16    baseType -> BOOLEAN
Rule 17    baseType -> STRING
Rule 18    block -> BEGIN contentList END
Rule 19    contentList -> content contentTail
Rule 20    contentList -> empty
Rule 21    contentTail -> SEMICOLON contentList
Rule 22    contentTail -> empty
Rule 23    content -> openStatement
Rule 24    content -> closedStatement
Rule 25    openStatement -> IF booleanexpression THEN content
Rule 26    openStatement -> IF booleanexpression THEN closedStatement ELSE openStatement
Rule 27    openStatement -> WHILE booleanexpression DO openStatement
Rule 28    openStatement -> FOR ID ATTRIB expression forDirection expression DO openStatement
Rule 29    closedStatement -> simpleStatement
Rule 30    closedStatement -> block
Rule 31    closedStatement -> IF booleanexpression THEN closedStatement ELSE closedStatement
Rule 32    closedStatement -> WHILE booleanexpression DO closedStatement
Rule 33    closedStatement -> FOR ID ATTRIB expression forDirection expression DO closedStatement
Rule 34    simpleStatement -> WRITELN LPARENT writeArgs RPARENT
Rule 35    simpleStatement -> WRITE LPARENT writeArgs RPARENT
Rule 36    writeArgs -> singleArg moreArgs
Rule 37    moreArgs -> COMMA singleArg moreArgs
Rule 38    moreArgs -> empty
Rule 39    singleArg -> FRASE
Rule 40    singleArg -> ID idTail
Rule 41    simpleStatement -> READLN LPARENT readIdOrArray RPARENT
Rule 42    readIdOrArray -> ID idTail
Rule 43    idTail -> LBRACKET expression RBRACKET
Rule 44    idTail -> empty
Rule 45    simpleStatement -> attribIdOrArray ATTRIB expression
Rule 46    attribIdOrArray -> ID idTail
Rule 47    forDirection -> TO
Rule 48    forDirection -> DOWNTO
Rule 49    booleanexpression -> expression booleanTail
Rule 50    booleanTail -> oplogico expression
Rule 51    booleanTail -> empty
Rule 52    expression -> termo
Rule 53    expression -> expression oplp termo
Rule 54    termo -> fator
Rule 55    termo -> termo ophp fator
Rule 56    ophp -> TIMES
Rule 57    ophp -> DIV
Rule 58    ophp -> MOD
Rule 59    ophp -> AND
Rule 60    ophp -> DIVIDE
Rule 61    oplp -> PLUS
Rule 62    oplp -> MINUS
Rule 63    oplp -> OR
Rule 64    fator -> const
Rule 65    fator -> var
Rule 66    fator -> LPARENT booleanexpression RPARENT
Rule 67    fator -> functioncall
Rule 68    fator -> NOT fator
Rule 69    functioncall -> LENGTH LPARENT arguments RPARENT
Rule 70    arguments -> ID
Rule 71    arguments -> FRASE
Rule 72    const -> NUMBER
Rule 73    const -> FRASE
Rule 74    const -> TRUE
Rule 75    const -> FALSE
Rule 76    var -> ID varTail
Rule 77    varTail -> LBRACKET expression RBRACKET
Rule 78    varTail -> empty
Rule 79    oplogico -> EQUALS
Rule 80    oplogico -> GREATER
Rule 81    oplogico -> GE
Rule 82    oplogico -> LESSER
Rule 83    oplogico -> LE
Rule 84    oplogico -> NOTEQUAL
Rule 85    empty -> <empty>

Terminals, with rules where they appear

AND                  : 59
ARRAY                : 13
ATTRIB               : 28 33 45
BEGIN                : 18
BOOLEAN              : 16
COLON                : 7
COMMA                : 9 37
COMMENT              : 
DIV                  : 57
DIVIDE               : 60
DO                   : 27 28 32 33
DOT                  : 1
DOWNTO               : 48
ELSE                 : 26 31
END                  : 18
EQUALS               : 79
FALSE                : 75
FOR                  : 28 33
FRASE                : 39 71 73
FUNCTION             : 
GE                   : 81
GREATER              : 80
ID                   : 2 8 9 28 33 40 42 46 70 76
IF                   : 25 26 31
INTEGER              : 14
LBRACKET             : 13 43 77
LE                   : 83
LENGTH               : 69
LESSER               : 82
LPARENT              : 34 35 41 66 69
MINUS                : 62
MOD                  : 58
NOT                  : 68
NOTEQUAL             : 84
NUMBER               : 13 13 72
OF                   : 13
OR                   : 63
PLUS                 : 61
PROGRAM              : 2
RANGE                : 13
RBRACKET             : 13 43 77
READLN               : 41
REAL                 : 15
RPARENT              : 34 35 41 66 69
SEMICOLON            : 2 7 21
STRING               : 17
THEN                 : 25 26 31
TIMES                : 56
TO                   : 47
TRUE                 : 74
VAR                  : 3
WHILE                : 27 32
WRITE                : 35
WRITELN              : 34
error                : 

Nonterminals, with rules where they appear

arguments            : 69
arrayType            : 12
attribIdOrArray      : 45
baseType             : 11 13
block                : 1 30
booleanTail          : 49
booleanexpression    : 25 26 27 31 32 66
closedStatement      : 24 26 31 31 32 33
const                : 64
content              : 19 25
contentList          : 18 21
contentTail          : 19
empty                : 4 6 10 20 22 38 44 51 78
expression           : 28 28 33 33 43 45 49 50 53 77
fator                : 54 55 68
forDirection         : 28 33
functioncall         : 67
header               : 1
idList               : 7
idListTail           : 8 9
idTail               : 40 42 46
moreArgs             : 36 37
openStatement        : 23 26 27 28
ophp                 : 55
oplogico             : 50
oplp                 : 53
program              : 0
readIdOrArray        : 41
simpleStatement      : 29
singleArg            : 36 37
termo                : 52 53 55
type                 : 7
var                  : 65
varDeclaration       : 5
varDecls             : 3 5
varTail              : 76
variables            : 2
writeArgs            : 34 35

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . header block DOT
    (2) header -> . PROGRAM ID SEMICOLON variables

    PROGRAM         shift and go to state 3

    program                        shift and go to state 1
    header                         shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> header . block DOT
    (18) block -> . BEGIN contentList END

    BEGIN           shift and go to state 5

    block                          shift and go to state 4

state 3

    (2) header -> PROGRAM . ID SEMICOLON variables

    ID              shift and go to state 6


state 4

    (1) program -> header block . DOT

    DOT             shift and go to state 7


state 5

    (18) block -> BEGIN . contentList END
    (19) contentList -> . content contentTail
    (20) contentList -> . empty
    (23) content -> . openStatement
    (24) content -> . closedStatement
    (85) empty -> .
    (25) openStatement -> . IF booleanexpression THEN content
    (26) openStatement -> . IF booleanexpression THEN closedStatement ELSE openStatement
    (27) openStatement -> . WHILE booleanexpression DO openStatement
    (28) openStatement -> . FOR ID ATTRIB expression forDirection expression DO openStatement
    (29) closedStatement -> . simpleStatement
    (30) closedStatement -> . block
    (31) closedStatement -> . IF booleanexpression THEN closedStatement ELSE closedStatement
    (32) closedStatement -> . WHILE booleanexpression DO closedStatement
    (33) closedStatement -> . FOR ID ATTRIB expression forDirection expression DO closedStatement
    (34) simpleStatement -> . WRITELN LPARENT writeArgs RPARENT
    (35) simpleStatement -> . WRITE LPARENT writeArgs RPARENT
    (41) simpleStatement -> . READLN LPARENT readIdOrArray RPARENT
    (45) simpleStatement -> . attribIdOrArray ATTRIB expression
    (18) block -> . BEGIN contentList END
    (46) attribIdOrArray -> . ID idTail

    END             reduce using rule 85 (empty -> .)
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 15
    WRITELN         shift and go to state 19
    WRITE           shift and go to state 20
    READLN          shift and go to state 21
    BEGIN           shift and go to state 5
    ID              shift and go to state 16

    contentList                    shift and go to state 8
    content                        shift and go to state 9
    empty                          shift and go to state 10
    openStatement                  shift and go to state 11
    closedStatement                shift and go to state 12
    simpleStatement                shift and go to state 17
    block                          shift and go to state 18
    attribIdOrArray                shift and go to state 22

state 6

    (2) header -> PROGRAM ID . SEMICOLON variables

    SEMICOLON       shift and go to state 23


state 7

    (1) program -> header block DOT .

    $end            reduce using rule 1 (program -> header block DOT .)


state 8

    (18) block -> BEGIN contentList . END

    END             shift and go to state 24


state 9

    (19) contentList -> content . contentTail
    (21) contentTail -> . SEMICOLON contentList
    (22) contentTail -> . empty
    (85) empty -> .

    SEMICOLON       shift and go to state 26
    END             reduce using rule 85 (empty -> .)

    contentTail                    shift and go to state 25
    empty                          shift and go to state 27

state 10

    (20) contentList -> empty .

    END             reduce using rule 20 (contentList -> empty .)


state 11

    (23) content -> openStatement .

    SEMICOLON       reduce using rule 23 (content -> openStatement .)
    END             reduce using rule 23 (content -> openStatement .)


state 12

    (24) content -> closedStatement .

    SEMICOLON       reduce using rule 24 (content -> closedStatement .)
    END             reduce using rule 24 (content -> closedStatement .)


state 13

    (25) openStatement -> IF . booleanexpression THEN content
    (26) openStatement -> IF . booleanexpression THEN closedStatement ELSE openStatement
    (31) closedStatement -> IF . booleanexpression THEN closedStatement ELSE closedStatement
    (49) booleanexpression -> . expression booleanTail
    (52) expression -> . termo
    (53) expression -> . expression oplp termo
    (54) termo -> . fator
    (55) termo -> . termo ophp fator
    (64) fator -> . const
    (65) fator -> . var
    (66) fator -> . LPARENT booleanexpression RPARENT
    (67) fator -> . functioncall
    (68) fator -> . NOT fator
    (72) const -> . NUMBER
    (73) const -> . FRASE
    (74) const -> . TRUE
    (75) const -> . FALSE
    (76) var -> . ID varTail
    (69) functioncall -> . LENGTH LPARENT arguments RPARENT

    LPARENT         shift and go to state 34
    NOT             shift and go to state 36
    NUMBER          shift and go to state 37
    FRASE           shift and go to state 38
    TRUE            shift and go to state 39
    FALSE           shift and go to state 40
    ID              shift and go to state 41
    LENGTH          shift and go to state 42

    booleanexpression              shift and go to state 28
    expression                     shift and go to state 29
    termo                          shift and go to state 30
    fator                          shift and go to state 31
    const                          shift and go to state 32
    var                            shift and go to state 33
    functioncall                   shift and go to state 35

state 14

    (27) openStatement -> WHILE . booleanexpression DO openStatement
    (32) closedStatement -> WHILE . booleanexpression DO closedStatement
    (49) booleanexpression -> . expression booleanTail
    (52) expression -> . termo
    (53) expression -> . expression oplp termo
    (54) termo -> . fator
    (55) termo -> . termo ophp fator
    (64) fator -> . const
    (65) fator -> . var
    (66) fator -> . LPARENT booleanexpression RPARENT
    (67) fator -> . functioncall
    (68) fator -> . NOT fator
    (72) const -> . NUMBER
    (73) const -> . FRASE
    (74) const -> . TRUE
    (75) const -> . FALSE
    (76) var -> . ID varTail
    (69) functioncall -> . LENGTH LPARENT arguments RPARENT

    LPARENT         shift and go to state 34
    NOT             shift and go to state 36
    NUMBER          shift and go to state 37
    FRASE           shift and go to state 38
    TRUE            shift and go to state 39
    FALSE           shift and go to state 40
    ID              shift and go to state 41
    LENGTH          shift and go to state 42

    booleanexpression              shift and go to state 43
    expression                     shift and go to state 29
    termo                          shift and go to state 30
    fator                          shift and go to state 31
    const                          shift and go to state 32
    var                            shift and go to state 33
    functioncall                   shift and go to state 35

state 15

    (28) openStatement -> FOR . ID ATTRIB expression forDirection expression DO openStatement
    (33) closedStatement -> FOR . ID ATTRIB expression forDirection expression DO closedStatement

    ID              shift and go to state 44


state 16

    (46) attribIdOrArray -> ID . idTail
    (43) idTail -> . LBRACKET expression RBRACKET
    (44) idTail -> . empty
    (85) empty -> .

    LBRACKET        shift and go to state 46
    ATTRIB          reduce using rule 85 (empty -> .)

    idTail                         shift and go to state 45
    empty                          shift and go to state 47

state 17

    (29) closedStatement -> simpleStatement .

    SEMICOLON       reduce using rule 29 (closedStatement -> simpleStatement .)
    END             reduce using rule 29 (closedStatement -> simpleStatement .)
    ELSE            reduce using rule 29 (closedStatement -> simpleStatement .)


state 18

    (30) closedStatement -> block .

    SEMICOLON       reduce using rule 30 (closedStatement -> block .)
    END             reduce using rule 30 (closedStatement -> block .)
    ELSE            reduce using rule 30 (closedStatement -> block .)


state 19

    (34) simpleStatement -> WRITELN . LPARENT writeArgs RPARENT

    LPARENT         shift and go to state 48


state 20

    (35) simpleStatement -> WRITE . LPARENT writeArgs RPARENT

    LPARENT         shift and go to state 49


state 21

    (41) simpleStatement -> READLN . LPARENT readIdOrArray RPARENT

    LPARENT         shift and go to state 50


state 22

    (45) simpleStatement -> attribIdOrArray . ATTRIB expression

    ATTRIB          shift and go to state 51


state 23

    (2) header -> PROGRAM ID SEMICOLON . variables
    (3) variables -> . VAR varDecls
    (4) variables -> . empty
    (85) empty -> .

    VAR             shift and go to state 53
    BEGIN           reduce using rule 85 (empty -> .)

    variables                      shift and go to state 52
    empty                          shift and go to state 54

state 24

    (18) block -> BEGIN contentList END .

    DOT             reduce using rule 18 (block -> BEGIN contentList END .)
    SEMICOLON       reduce using rule 18 (block -> BEGIN contentList END .)
    END             reduce using rule 18 (block -> BEGIN contentList END .)
    ELSE            reduce using rule 18 (block -> BEGIN contentList END .)


state 25

    (19) contentList -> content contentTail .

    END             reduce using rule 19 (contentList -> content contentTail .)


state 26

    (21) contentTail -> SEMICOLON . contentList
    (19) contentList -> . content contentTail
    (20) contentList -> . empty
    (23) content -> . openStatement
    (24) content -> . closedStatement
    (85) empty -> .
    (25) openStatement -> . IF booleanexpression THEN content
    (26) openStatement -> . IF booleanexpression THEN closedStatement ELSE openStatement
    (27) openStatement -> . WHILE booleanexpression DO openStatement
    (28) openStatement -> . FOR ID ATTRIB expression forDirection expression DO openStatement
    (29) closedStatement -> . simpleStatement
    (30) closedStatement -> . block
    (31) closedStatement -> . IF booleanexpression THEN closedStatement ELSE closedStatement
    (32) closedStatement -> . WHILE booleanexpression DO closedStatement
    (33) closedStatement -> . FOR ID ATTRIB expression forDirection expression DO closedStatement
    (34) simpleStatement -> . WRITELN LPARENT writeArgs RPARENT
    (35) simpleStatement -> . WRITE LPARENT writeArgs RPARENT
    (41) simpleStatement -> . READLN LPARENT readIdOrArray RPARENT
    (45) simpleStatement -> . attribIdOrArray ATTRIB expression
    (18) block -> . BEGIN contentList END
    (46) attribIdOrArray -> . ID idTail

    END             reduce using rule 85 (empty -> .)
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 15
    WRITELN         shift and go to state 19
    WRITE           shift and go to state 20
    READLN          shift and go to state 21
    BEGIN           shift and go to state 5
    ID              shift and go to state 16

    contentList                    shift and go to state 55
    content                        shift and go to state 9
    empty                          shift and go to state 10
    openStatement                  shift and go to state 11
    closedStatement                shift and go to state 12
    simpleStatement                shift and go to state 17
    block                          shift and go to state 18
    attribIdOrArray                shift and go to state 22

state 27

    (22) contentTail -> empty .

    END             reduce using rule 22 (contentTail -> empty .)


state 28

    (25) openStatement -> IF booleanexpression . THEN content
    (26) openStatement -> IF booleanexpression . THEN closedStatement ELSE openStatement
    (31) closedStatement -> IF booleanexpression . THEN closedStatement ELSE closedStatement

    THEN            shift and go to state 56


state 29

    (49) booleanexpression -> expression . booleanTail
    (53) expression -> expression . oplp termo
    (50) booleanTail -> . oplogico expression
    (51) booleanTail -> . empty
    (61) oplp -> . PLUS
    (62) oplp -> . MINUS
    (63) oplp -> . OR
    (79) oplogico -> . EQUALS
    (80) oplogico -> . GREATER
    (81) oplogico -> . GE
    (82) oplogico -> . LESSER
    (83) oplogico -> . LE
    (84) oplogico -> . NOTEQUAL
    (85) empty -> .

    PLUS            shift and go to state 61
    MINUS           shift and go to state 62
    OR              shift and go to state 63
    EQUALS          shift and go to state 64
    GREATER         shift and go to state 65
    GE              shift and go to state 66
    LESSER          shift and go to state 67
    LE              shift and go to state 68
    NOTEQUAL        shift and go to state 69
    THEN            reduce using rule 85 (empty -> .)
    DO              reduce using rule 85 (empty -> .)
    RPARENT         reduce using rule 85 (empty -> .)

    booleanTail                    shift and go to state 57
    oplp                           shift and go to state 58
    oplogico                       shift and go to state 59
    empty                          shift and go to state 60

state 30

    (52) expression -> termo .
    (55) termo -> termo . ophp fator
    (56) ophp -> . TIMES
    (57) ophp -> . DIV
    (58) ophp -> . MOD
    (59) ophp -> . AND
    (60) ophp -> . DIVIDE

    PLUS            reduce using rule 52 (expression -> termo .)
    MINUS           reduce using rule 52 (expression -> termo .)
    OR              reduce using rule 52 (expression -> termo .)
    EQUALS          reduce using rule 52 (expression -> termo .)
    GREATER         reduce using rule 52 (expression -> termo .)
    GE              reduce using rule 52 (expression -> termo .)
    LESSER          reduce using rule 52 (expression -> termo .)
    LE              reduce using rule 52 (expression -> termo .)
    NOTEQUAL        reduce using rule 52 (expression -> termo .)
    THEN            reduce using rule 52 (expression -> termo .)
    DO              reduce using rule 52 (expression -> termo .)
    RPARENT         reduce using rule 52 (expression -> termo .)
    RBRACKET        reduce using rule 52 (expression -> termo .)
    SEMICOLON       reduce using rule 52 (expression -> termo .)
    END             reduce using rule 52 (expression -> termo .)
    ELSE            reduce using rule 52 (expression -> termo .)
    TO              reduce using rule 52 (expression -> termo .)
    DOWNTO          reduce using rule 52 (expression -> termo .)
    TIMES           shift and go to state 71
    DIV             shift and go to state 72
    MOD             shift and go to state 73
    AND             shift and go to state 74
    DIVIDE          shift and go to state 75

    ophp                           shift and go to state 70

state 31

    (54) termo -> fator .

    TIMES           reduce using rule 54 (termo -> fator .)
    DIV             reduce using rule 54 (termo -> fator .)
    MOD             reduce using rule 54 (termo -> fator .)
    AND             reduce using rule 54 (termo -> fator .)
    DIVIDE          reduce using rule 54 (termo -> fator .)
    PLUS            reduce using rule 54 (termo -> fator .)
    MINUS           reduce using rule 54 (termo -> fator .)
    OR              reduce using rule 54 (termo -> fator .)
    EQUALS          reduce using rule 54 (termo -> fator .)
    GREATER         reduce using rule 54 (termo -> fator .)
    GE              reduce using rule 54 (termo -> fator .)
    LESSER          reduce using rule 54 (termo -> fator .)
    LE              reduce using rule 54 (termo -> fator .)
    NOTEQUAL        reduce using rule 54 (termo -> fator .)
    THEN            reduce using rule 54 (termo -> fator .)
    DO              reduce using rule 54 (termo -> fator .)
    RPARENT         reduce using rule 54 (termo -> fator .)
    RBRACKET        reduce using rule 54 (termo -> fator .)
    SEMICOLON       reduce using rule 54 (termo -> fator .)
    END             reduce using rule 54 (termo -> fator .)
    ELSE            reduce using rule 54 (termo -> fator .)
    TO              reduce using rule 54 (termo -> fator .)
    DOWNTO          reduce using rule 54 (termo -> fator .)


state 32

    (64) fator -> const .

    TIMES           reduce using rule 64 (fator -> const .)
    DIV             reduce using rule 64 (fator -> const .)
    MOD             reduce using rule 64 (fator -> const .)
    AND             reduce using rule 64 (fator -> const .)
    DIVIDE          reduce using rule 64 (fator -> const .)
    PLUS            reduce using rule 64 (fator -> const .)
    MINUS           reduce using rule 64 (fator -> const .)
    OR              reduce using rule 64 (fator -> const .)
    EQUALS          reduce using rule 64 (fator -> const .)
    GREATER         reduce using rule 64 (fator -> const .)
    GE              reduce using rule 64 (fator -> const .)
    LESSER          reduce using rule 64 (fator -> const .)
    LE              reduce using rule 64 (fator -> const .)
    NOTEQUAL        reduce using rule 64 (fator -> const .)
    THEN            reduce using rule 64 (fator -> const .)
    DO              reduce using rule 64 (fator -> const .)
    RPARENT         reduce using rule 64 (fator -> const .)
    RBRACKET        reduce using rule 64 (fator -> const .)
    SEMICOLON       reduce using rule 64 (fator -> const .)
    END             reduce using rule 64 (fator -> const .)
    ELSE            reduce using rule 64 (fator -> const .)
    TO              reduce using rule 64 (fator -> const .)
    DOWNTO          reduce using rule 64 (fator -> const .)


state 33

    (65) fator -> var .

    TIMES           reduce using rule 65 (fator -> var .)
    DIV             reduce using rule 65 (fator -> var .)
    MOD             reduce using rule 65 (fator -> var .)
    AND             reduce using rule 65 (fator -> var .)
    DIVIDE          reduce using rule 65 (fator -> var .)
    PLUS            reduce using rule 65 (fator -> var .)
    MINUS           reduce using rule 65 (fator -> var .)
    OR              reduce using rule 65 (fator -> var .)
    EQUALS          reduce using rule 65 (fator -> var .)
    GREATER         reduce using rule 65 (fator -> var .)
    GE              reduce using rule 65 (fator -> var .)
    LESSER          reduce using rule 65 (fator -> var .)
    LE              reduce using rule 65 (fator -> var .)
    NOTEQUAL        reduce using rule 65 (fator -> var .)
    THEN            reduce using rule 65 (fator -> var .)
    DO              reduce using rule 65 (fator -> var .)
    RPARENT         reduce using rule 65 (fator -> var .)
    RBRACKET        reduce using rule 65 (fator -> var .)
    SEMICOLON       reduce using rule 65 (fator -> var .)
    END             reduce using rule 65 (fator -> var .)
    ELSE            reduce using rule 65 (fator -> var .)
    TO              reduce using rule 65 (fator -> var .)
    DOWNTO          reduce using rule 65 (fator -> var .)


state 34

    (66) fator -> LPARENT . booleanexpression RPARENT
    (49) booleanexpression -> . expression booleanTail
    (52) expression -> . termo
    (53) expression -> . expression oplp termo
    (54) termo -> . fator
    (55) termo -> . termo ophp fator
    (64) fator -> . const
    (65) fator -> . var
    (66) fator -> . LPARENT booleanexpression RPARENT
    (67) fator -> . functioncall
    (68) fator -> . NOT fator
    (72) const -> . NUMBER
    (73) const -> . FRASE
    (74) const -> . TRUE
    (75) const -> . FALSE
    (76) var -> . ID varTail
    (69) functioncall -> . LENGTH LPARENT arguments RPARENT

    LPARENT         shift and go to state 34
    NOT             shift and go to state 36
    NUMBER          shift and go to state 37
    FRASE           shift and go to state 38
    TRUE            shift and go to state 39
    FALSE           shift and go to state 40
    ID              shift and go to state 41
    LENGTH          shift and go to state 42

    booleanexpression              shift and go to state 76
    expression                     shift and go to state 29
    termo                          shift and go to state 30
    fator                          shift and go to state 31
    const                          shift and go to state 32
    var                            shift and go to state 33
    functioncall                   shift and go to state 35

state 35

    (67) fator -> functioncall .

    TIMES           reduce using rule 67 (fator -> functioncall .)
    DIV             reduce using rule 67 (fator -> functioncall .)
    MOD             reduce using rule 67 (fator -> functioncall .)
    AND             reduce using rule 67 (fator -> functioncall .)
    DIVIDE          reduce using rule 67 (fator -> functioncall .)
    PLUS            reduce using rule 67 (fator -> functioncall .)
    MINUS           reduce using rule 67 (fator -> functioncall .)
    OR              reduce using rule 67 (fator -> functioncall .)
    EQUALS          reduce using rule 67 (fator -> functioncall .)
    GREATER         reduce using rule 67 (fator -> functioncall .)
    GE              reduce using rule 67 (fator -> functioncall .)
    LESSER          reduce using rule 67 (fator -> functioncall .)
    LE              reduce using rule 67 (fator -> functioncall .)
    NOTEQUAL        reduce using rule 67 (fator -> functioncall .)
    THEN            reduce using rule 67 (fator -> functioncall .)
    DO              reduce using rule 67 (fator -> functioncall .)
    RPARENT         reduce using rule 67 (fator -> functioncall .)
    RBRACKET        reduce using rule 67 (fator -> functioncall .)
    SEMICOLON       reduce using rule 67 (fator -> functioncall .)
    END             reduce using rule 67 (fator -> functioncall .)
    ELSE            reduce using rule 67 (fator -> functioncall .)
    TO              reduce using rule 67 (fator -> functioncall .)
    DOWNTO          reduce using rule 67 (fator -> functioncall .)


state 36

    (68) fator -> NOT . fator
    (64) fator -> . const
    (65) fator -> . var
    (66) fator -> . LPARENT booleanexpression RPARENT
    (67) fator -> . functioncall
    (68) fator -> . NOT fator
    (72) const -> . NUMBER
    (73) const -> . FRASE
    (74) const -> . TRUE
    (75) const -> . FALSE
    (76) var -> . ID varTail
    (69) functioncall -> . LENGTH LPARENT arguments RPARENT

    LPARENT         shift and go to state 34
    NOT             shift and go to state 36
    NUMBER          shift and go to state 37
    FRASE           shift and go to state 38
    TRUE            shift and go to state 39
    FALSE           shift and go to state 40
    ID              shift and go to state 41
    LENGTH          shift and go to state 42

    fator                          shift and go to state 77
    const                          shift and go to state 32
    var                            shift and go to state 33
    functioncall                   shift and go to state 35

state 37

    (72) const -> NUMBER .

    TIMES           reduce using rule 72 (const -> NUMBER .)
    DIV             reduce using rule 72 (const -> NUMBER .)
    MOD             reduce using rule 72 (const -> NUMBER .)
    AND             reduce using rule 72 (const -> NUMBER .)
    DIVIDE          reduce using rule 72 (const -> NUMBER .)
    PLUS            reduce using rule 72 (const -> NUMBER .)
    MINUS           reduce using rule 72 (const -> NUMBER .)
    OR              reduce using rule 72 (const -> NUMBER .)
    EQUALS          reduce using rule 72 (const -> NUMBER .)
    GREATER         reduce using rule 72 (const -> NUMBER .)
    GE              reduce using rule 72 (const -> NUMBER .)
    LESSER          reduce using rule 72 (const -> NUMBER .)
    LE              reduce using rule 72 (const -> NUMBER .)
    NOTEQUAL        reduce using rule 72 (const -> NUMBER .)
    THEN            reduce using rule 72 (const -> NUMBER .)
    DO              reduce using rule 72 (const -> NUMBER .)
    RPARENT         reduce using rule 72 (const -> NUMBER .)
    RBRACKET        reduce using rule 72 (const -> NUMBER .)
    SEMICOLON       reduce using rule 72 (const -> NUMBER .)
    END             reduce using rule 72 (const -> NUMBER .)
    ELSE            reduce using rule 72 (const -> NUMBER .)
    TO              reduce using rule 72 (const -> NUMBER .)
    DOWNTO          reduce using rule 72 (const -> NUMBER .)


state 38

    (73) const -> FRASE .

    TIMES           reduce using rule 73 (const -> FRASE .)
    DIV             reduce using rule 73 (const -> FRASE .)
    MOD             reduce using rule 73 (const -> FRASE .)
    AND             reduce using rule 73 (const -> FRASE .)
    DIVIDE          reduce using rule 73 (const -> FRASE .)
    PLUS            reduce using rule 73 (const -> FRASE .)
    MINUS           reduce using rule 73 (const -> FRASE .)
    OR              reduce using rule 73 (const -> FRASE .)
    EQUALS          reduce using rule 73 (const -> FRASE .)
    GREATER         reduce using rule 73 (const -> FRASE .)
    GE              reduce using rule 73 (const -> FRASE .)
    LESSER          reduce using rule 73 (const -> FRASE .)
    LE              reduce using rule 73 (const -> FRASE .)
    NOTEQUAL        reduce using rule 73 (const -> FRASE .)
    THEN            reduce using rule 73 (const -> FRASE .)
    DO              reduce using rule 73 (const -> FRASE .)
    RPARENT         reduce using rule 73 (const -> FRASE .)
    RBRACKET        reduce using rule 73 (const -> FRASE .)
    SEMICOLON       reduce using rule 73 (const -> FRASE .)
    END             reduce using rule 73 (const -> FRASE .)
    ELSE            reduce using rule 73 (const -> FRASE .)
    TO              reduce using rule 73 (const -> FRASE .)
    DOWNTO          reduce using rule 73 (const -> FRASE .)


state 39

    (74) const -> TRUE .

    TIMES           reduce using rule 74 (const -> TRUE .)
    DIV             reduce using rule 74 (const -> TRUE .)
    MOD             reduce using rule 74 (const -> TRUE .)
    AND             reduce using rule 74 (const -> TRUE .)
    DIVIDE          reduce using rule 74 (const -> TRUE .)
    PLUS            reduce using rule 74 (const -> TRUE .)
    MINUS           reduce using rule 74 (const -> TRUE .)
    OR              reduce using rule 74 (const -> TRUE .)
    EQUALS          reduce using rule 74 (const -> TRUE .)
    GREATER         reduce using rule 74 (const -> TRUE .)
    GE              reduce using rule 74 (const -> TRUE .)
    LESSER          reduce using rule 74 (const -> TRUE .)
    LE              reduce using rule 74 (const -> TRUE .)
    NOTEQUAL        reduce using rule 74 (const -> TRUE .)
    THEN            reduce using rule 74 (const -> TRUE .)
    DO              reduce using rule 74 (const -> TRUE .)
    RPARENT         reduce using rule 74 (const -> TRUE .)
    RBRACKET        reduce using rule 74 (const -> TRUE .)
    SEMICOLON       reduce using rule 74 (const -> TRUE .)
    END             reduce using rule 74 (const -> TRUE .)
    ELSE            reduce using rule 74 (const -> TRUE .)
    TO              reduce using rule 74 (const -> TRUE .)
    DOWNTO          reduce using rule 74 (const -> TRUE .)


state 40

    (75) const -> FALSE .

    TIMES           reduce using rule 75 (const -> FALSE .)
    DIV             reduce using rule 75 (const -> FALSE .)
    MOD             reduce using rule 75 (const -> FALSE .)
    AND             reduce using rule 75 (const -> FALSE .)
    DIVIDE          reduce using rule 75 (const -> FALSE .)
    PLUS            reduce using rule 75 (const -> FALSE .)
    MINUS           reduce using rule 75 (const -> FALSE .)
    OR              reduce using rule 75 (const -> FALSE .)
    EQUALS          reduce using rule 75 (const -> FALSE .)
    GREATER         reduce using rule 75 (const -> FALSE .)
    GE              reduce using rule 75 (const -> FALSE .)
    LESSER          reduce using rule 75 (const -> FALSE .)
    LE              reduce using rule 75 (const -> FALSE .)
    NOTEQUAL        reduce using rule 75 (const -> FALSE .)
    THEN            reduce using rule 75 (const -> FALSE .)
    DO              reduce using rule 75 (const -> FALSE .)
    RPARENT         reduce using rule 75 (const -> FALSE .)
    RBRACKET        reduce using rule 75 (const -> FALSE .)
    SEMICOLON       reduce using rule 75 (const -> FALSE .)
    END             reduce using rule 75 (const -> FALSE .)
    ELSE            reduce using rule 75 (const -> FALSE .)
    TO              reduce using rule 75 (const -> FALSE .)
    DOWNTO          reduce using rule 75 (const -> FALSE .)


state 41

    (76) var -> ID . varTail
    (77) varTail -> . LBRACKET expression RBRACKET
    (78) varTail -> . empty
    (85) empty -> .

    LBRACKET        shift and go to state 79
    TIMES           reduce using rule 85 (empty -> .)
    DIV             reduce using rule 85 (empty -> .)
    MOD             reduce using rule 85 (empty -> .)
    AND             reduce using rule 85 (empty -> .)
    DIVIDE          reduce using rule 85 (empty -> .)
    PLUS            reduce using rule 85 (empty -> .)
    MINUS           reduce using rule 85 (empty -> .)
    OR              reduce using rule 85 (empty -> .)
    EQUALS          reduce using rule 85 (empty -> .)
    GREATER         reduce using rule 85 (empty -> .)
    GE              reduce using rule 85 (empty -> .)
    LESSER          reduce using rule 85 (empty -> .)
    LE              reduce using rule 85 (empty -> .)
    NOTEQUAL        reduce using rule 85 (empty -> .)
    THEN            reduce using rule 85 (empty -> .)
    DO              reduce using rule 85 (empty -> .)
    RPARENT         reduce using rule 85 (empty -> .)
    RBRACKET        reduce using rule 85 (empty -> .)
    SEMICOLON       reduce using rule 85 (empty -> .)
    END             reduce using rule 85 (empty -> .)
    ELSE            reduce using rule 85 (empty -> .)
    TO              reduce using rule 85 (empty -> .)
    DOWNTO          reduce using rule 85 (empty -> .)

    varTail                        shift and go to state 78
    empty                          shift and go to state 80

state 42

    (69) functioncall -> LENGTH . LPARENT arguments RPARENT

    LPARENT         shift and go to state 81


